<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <item android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home"/>-->
    <item android:title="@string/restaurantes"
        android:icon="@drawable/ic_baseline_restaurant_24"
        android:id="@+id/restaurant"/>
    <item android:title="@string/lugares_turisticos"
        android:icon="@drawable/ic_baseline_airplane_ticket_24"
        android:id="@+id/tour"/>
    <item android:title="@string/favoritos"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:id="@+id/fav"/>
    <item android:title="@string/mi_perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:id="@+id/profile"/>
</menu>