<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/atras"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:drawableLeftCompat="@drawable/ic_baseline_navigate_before_24" />
    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="@string/nombre"
        android:autofillHints="name"/>
    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="@string/apellido"
        android:autofillHints="name"/>
    <EditText
        android:id="@+id/emailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"/>
    <com.hbb20.CountryCodePicker
        android:id="@+id/nacionalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="@string/nacionalidad"
        android:autofillHints="name"
        app:ccp_showFullName="true"
        app:ccp_showPhoneCode="false"
        app:ccp_showNameCode="false"
        app:ccp_autoDetectLanguage="true"
        app:ccp_defaultNameCode="GT"/>
    <EditText
        android:id="@+id/numeroTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="number"
        android:hint="@string/telefono"
        android:autofillHints="phone"
        />
    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="password"/>
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:autofillHints="password"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_margin="10dp"
        android:background="@color/header"
        android:textSize="20sp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>