<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/cerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:textSize="12sp"
        tools:ignore="SmallSp"/>

    <EditText
        android:id="@+id/nombreUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="@string/nombre"
        android:autofillHints="name"/>
    <EditText
        android:id="@+id/apellidoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="@string/apellido"
        android:autofillHints="name"/>
    <EditText
        android:id="@+id/emailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"/>
    <EditText
        android:id="@+id/nacionalidadUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="@string/nacionalidad"
        android:autofillHints="name"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/numeroTelUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:inputType="number"
        android:hint="@string/telefono"
        android:autofillHints="phone"/>
    <Button
        android:id="@+id/actualizarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Actualizar informacion"
        android:textSize="15sp"
        tools:ignore="SmallSp"/>
    <Button
        android:id="@+id/updatePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cambiar contraseña"
        android:textSize="15sp"
        tools:ignore="SmallSp"/>


</LinearLayout>