<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:src="@drawable/wallpaper1"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/login"/>
        <TextView
            android:id="@+id/txt_signup"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="emailAddress"/>
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_margin="16dp"
            android:background="@color/header"
            android:textSize="20sp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>